# painbychoice

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: asset.rs  camera.rs  composite.rs  demo.rs  eval.rs  expr.rs  graph.rs  lib.rs  lower.rs  mat4.rs  node.rs  raise.rs  registry.rs  socket.rs  text.rs  timebase.rs  value.rs  vec3.rs  warp.rs
crates/live/: Cargo.toml
crates/live/assets/: NOTICE.md
crates/live/src/: aids.rs  app.rs  curves.rs  dock.rs  footage.rs  gizmo.rs  graph.rs  history.rs  icon.rs  layers.rs  main.rs  motionpath.rs  nodegraph.rs  onion.rs  props.rs  scene.rs  strips.rs  tests.rs  theme.rs  timeline.rs
crates/render/: Cargo.toml
crates/render/src/: decode.rs  lib.rs
docs/: prior-art.md
