[workspace]
resolver = "2"
members = ["crates/core", "crates/render", "crates/app"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

# Shared dependency versions. Individual crates opt in.
[workspace.dependencies]
kurbo = { version = "0.11", features = ["serde"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

motion-core = { path = "crates/core" }
motion-render = { path = "crates/render" }
