[package]
name = "motion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless document model + evaluation engine. No GPU, no windowing."

[dependencies]
kurbo.workspace = true
glam.workspace = true
serde.workspace = true
rhai.workspace = true
parley = "0.11"
skrifa = "0.43"

[dev-dependencies]
serde_json.workspace = true
