[package]
name = "motion-live"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Live GPU shell: winit window + vello renderer driving the engine in real time."

[[bin]]
name = "pbc"
path = "src/main.rs"

[dependencies]
motion-core.workspace = true
motion-render.workspace = true
kurbo.workspace = true
vello = "0.9"
winit = "0.30"
pollster = "0.4"
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false }
serde.workspace = true
serde_json.workspace = true
rfd = "0.17"
