[package]
name = "motion-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Turns an evaluated Scene into pixels. SVG backend today; vello/wgpu later."

[dependencies]
motion-core.workspace = true
kurbo.workspace = true
# Stills only. Default features minus the ones that pull in heavy or
# rarely-wanted formats would be a later tightening; footage import wants the
# common set to just work.
image = "0.25"
